--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.transform-rotateY-180 {
+  transform:rotateY(180deg);
+}
+
+.transform-style-3d {
+  transform-style:preserve-3d;
+  transform:rotateY(180deg);
+}
+
+.back-visibility-hidden {
+  backface-visibility: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
