--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,13 @@
   backface-visibility: hidden;
 }
 
+.character {
+  display: block;
+  width: 52px;
+  height: 72px;
+  background: url("../src/components/player/assets/executioner_2.png");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
